#3 Prepare for release
#3 Add license headers

#3 Add javadoc and cleanup code

#3 Remove obsolet cheetunit-api module

#3 Add license header

#3 Add javadoc and cleanup core code

#3 Add local ci execution pipeline script

#3 Prepare release